chinh lai ket cau bang trong room management